Last changed in html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Alexis/Portfolio </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive-style.css">
+    <link rel="stylesheet" href="StyleSheet.css">
+	<link rel="stylesheet" href="desktop.css">
 </head>
 <body>
   <header class="header-containers">
