replaced the contents of my file and changed something

--- a/index.html
+++ b/index.html
@@ -1,241 +1,213 @@
-@media screen and (min-width: 768px) {
-  body {
-    background-color: #e5e5e5;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Alexis/Portfolio </title>
+    <link rel="stylesheet" href="StyleSheet.css">
+	<link rel="stylesheet" href="desktop-respons.css">
+</head>
+<body>
+  <header class="header-containers">
+    <nav>
+      <a class="logo"> Alexis </a> 
+      <ul class="navbar-items">
+        <li><a href="#"> Portfolio </a></li>
+        <li><a href="#"> About </a></li>
+        <li><a href="#"> Contact </a></li>
+      </ul>
+      <button class="menu-phone">
+	   <img src="./image/Enabled.png" alt="">
+	  </button>
+    </nav>
+  </header>
 
-  .header-at-top {
-    background-image: url(./img/Header\ bg.svg);
-    background-size: cover;
-  }
+  <section class="header-at-top">
+	<h2 class="primary-text"> I’m Alexis, Glad to see you! </h2>
+	<p class="text-about"> I’m a software developer! I can help you build a product ,
+	  feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+	<h2 class="social"> LET'S CONNECT </h2>    
+	<div class="social-media-icons">
+	  <ul>
+		<li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
+		<li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
+		<li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
+		<li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
+		<li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
+	  </ul>    
+	</div>     
+  </section>
+  <section class="containers-works-section">
+   <div class="work-container">
+	  <div class="box">
+		 <img src="./image/Snapshoot Portfolio.png" alt="" class="snapshot">
+		 <div class="more-details">
+		   <div class="work-description-align-item">
+			   <div class="works-elements">
+				   <h2 class="project-title"> Tonic </h2>
+				   <div class="frame-client">
+					   <span class="client">
+						   CANOPY</span>
+					   <img src="./image/Counter.png" alt="">
+					   <span class="role"> Back End Dev </span>
+					   <img src="./image/Counter.png" alt="">
+					   <span class="year"> 2015 </span>
+				   </div>
+			   </div>
+		   </div>
+		   <p class="details">
+				   A daily selection of privately personalized reads; no accounts or sign-ups required.
+		   </p>
+		   <ul class="technologie-label">
+			   <li>html</li>
+			   <li>css</li>
+			   <li>javaScript</li>
+		   </ul>
+		   <button class="see-project">See Project</button>
+		 </div>
+	   </div>
+	   <div class="box">
+		 <img src="./image/Snapshoot Portfolio (1).png" alt="snapshot poortfolio" class="snapshot">
+		  <div class="more-details">
+			 <div class="work-description-align-item">
+			   <div class="works-elements">
+				 <h2 class="project-title"> Multi-Post Stories </h2>
+				 <div class="frame-client">
+					<span class="client"> CANOPY </span>
+					<img src="./image/Counter.png" alt="" class="counter">
+					<span class="role"> Back End Dev </span>
+					<img src="./image/Counter.png" alt="" class="counter">
+					<span class="year"> 2015 </span>
+				 </div>
+			   </div>
+			 </div>
+			<span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
+			 <ul class="technologie-label">
+			   <li> html </li>
+			   <li> css </li>
+			   <li> javaScript </li>
+			 </ul>
+			 <button class="see-project"> See Project </button>
+	      </div>
+	   </div>
 
-  .menu-phone {
-    display: none;
-  }
+	 <div class="box">
+		 <img src="./image/Snapshoot Portfolio (2).png" alt="" class="snapshot">
+		 <div class="more-details">
+		   <div class="work-description-align-item">
+				 <div class="works-elements">
+					 <h2 class="project-title"> Tonic </h2>
+					 <div class="frame-client">
+						 <span class="client">
+							 CANOPY</span>
+						 <img src="./image/Counter.png" alt="" class="counter">
+						 <span class="role"> Back End Dev </span>
+						 <img src="./image/Counter.png" alt="" class="counter">
+						 <span class="year">2015</span>
+					 </div>
+				 </div>
+			 </div>
+			 <span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
+			 <ul class="technologie-label">
+				 <li> html </li>
+				 <li> css </li>
+				 <li> javaScript </li>
+			 </ul>
+			 <button class="see-project"> See Project </button>
+		 </div>
+	 </div>
+
+	 <div class="box">
+		 <img src="./image/Snapshoot Portfolio (3).png" alt="" class="snapshot">
+		 <div class="more-details">
+		   <div class="work-description-align-item">
+			   <div class="works-elements">
+				   <h2 class="project-title"> Multi-Post Stories </h2>
+				   <div class="frame-client">
+					   <span class="client"> CANOPY </span>
+					   <img src="./image/Counter.png" alt="" class="counter">
+					   <span class="role"> Back End Dev </span>
+					   <img src="./image/Counter.png" alt="" class="counter">
+					   <span class="year"> 2015 </span>
+				   </div>
+			   </div>
+		   </div>
+		   <span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
+		   <ul class="technologie-label">
+			   <li> html </li>
+			   <li> css </li>
+			   <li> javaScrip t</li>
+		   </ul>
+		   <button class="see-project"> See Project </button>
+	   </div>
+	 </div>
+    </div>
+   </section>
+   <section class="about">
+      <div class="intro">
+          <h2 class="title"> About Myself </h2>
+          <p class="description">
+              Hello I’m a software developer! I can help you build a product , feature or 
+              website. Look through some of my work and experience! If you like what you
+               see and have a project you need coded, don’t hestiate to contact me.
+          </p>
+          <div class="social-media">
+              <span class="connect"> LET'S CONNECT </span>
+              <div class="social-media-icons2">
+                  <ul>
+                     <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
+					 <li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
+					 <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
+					 <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
+					 <li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
+                  </ul>    
+              </div>
+          </div>
+          <button class="see-project"> Get My Resume </button>
+      </div>
   
-  .header-containers {
-	background-color: #fff;
-  }
+      <ul class="language-program">
+           <li>
+              <span class="language-title"> LANGUAGES </span>
+              <button class="chevron-button">
+                 <img src="./image/chevron-down.png" alt="" class="chevron">
+              </button>
+			  <ul class="language-list">
+				  <li><img src="./image/JS-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
+				  <li><img src="./image/HTML5-icon.png" alt="" class="language-icon"><span class="language-name"> HTML </span></li>
+				  <li><img src="./image/CSS-icon.png" alt="" class="language-icon"><span class="language-name"> CSS </span></li>
+			  </ul>
+           </li>
+           <li>
+		     <div class="frameworks">
+			  <span class="frameworks-title"> Frameworks </span>
+			   <button class="chevron-button">
+			   <img src="./image/chevron-right.png" alt="" class="chevron">
+				</button>
+		     </div>
+            </li>
+            <li>
+			  <div class="skills">
+			    <span class="skills-title"> Skills </span>
+			    <button class="chevron-button">
+			    <img src="./image/chevron-right.png" alt="" class="chevron">
+			    </button>
+			  </div>
+		    </li>
+      </ul>
+      </div>
+  </section>
+  <section class="contact">
+	  <h2> Contact me </h2>
+	  <p> If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it  </p>
 
-  .logo {
-    padding-left: 143px;
-	color: #6070ff;
-  }
-
-  .navbar-items {
-    padding-right: 142px;
-  }
-
-  .navbar-items a {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
-    color:  #6070ff;
-    text-decoration: none;
-    padding: 0 12px;
-  }
-
-  .primary-text,
-  .social,
-  .social-media-icons {
-    padding-left: 260px;
-  }
-
-  .text-about {
-    padding: 0 260px;
-  }
-
-  .work-container {
-    display: grid;
-    column-gap: 0;
-    row-gap: 88px;
-  }
-
-  .box {
-    display: flex;
-    flex-direction: row;
-    padding: 24px;
-    width: 60%;
-    background: #fff;
-    border: 1px solid #dfe1e6;
-    border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    height: fit-content;
-  }
-
-  .more-details {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    width: 544px;
-    height: fit-content;
-    align-items: flex-start;
-  }
-
-  .snapshot {
-    width: 554px;
-    border-radius: 1px;
-  }
-
-  .about {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding: 114px 96px;
-    width: 100%;
-    background-color: #fff;
-    border-top-right-radius: 150px;
-  }
-
-  .social-media-icons2 {
-    padding-left: 0;
-  }
-
-  .social-media-icons li {
-    display: inline;
-  }
-
-  .intro {
-    width: 40%;
-  }
-
-  .language-program {
-    width: 60%;
-    padding: 24px;
-    margin: 0;
-    align-items: flex-start;
-    height: 409px;
-  }
-
-  .language-program li {
-    padding: 0;
-    width: 100%;
-  }
-
-  .language-title {
-    padding-right: 31%;
-  }
-
-  .language-list {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .language-list li {
-    flex-direction: column;
-    height: fit-content;
-  }
-
-  .frameworks,
-  .skills {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #dfe1e6;
-    padding: 18px 0;
-    width: 100%;
-  }
-
-  .frameworks-title,
-  .skills-title {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-  }
-
-  /* contact section */
-
-  .contact {
-    padding: 122px 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contact h2 {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    text-align: center;
-    color: #fff;
-    padding-top: 103px;
-    padding-bottom: 12px;
-    width: 447px;
-    margin-left: 37px;
-  }
-
-  .contact p {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    color: #ebebff;
-    text-align: center;
-    padding: 0 24px 30px 24px;
-    width: 447px;
-    margin-left: 37px;
-  }
-
-  .contact-form {
-    padding-left: 12px;
-    margin-left: 50px;
-    width: 480px;
-  }
-
-  #name,
-  #user-email,
-  #text-area {
-    width: 430px;
-    margin: 12px 0;
-    border: 1px solid #cfd8dc;
-    padding: 1rem 12px;
-  }
-
-  #text-area {
-    resize: none;
-    height: auto;
-  }
-
-  .button-submit {
-    width: 140px;
-    height: 48px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 45px;
-    border-radius: 8px;
-    background: #fff;
-    align-items: center;
-    padding: 12px 16px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #6070ff;
-    border: 1px solid #cfd8dc;
-    display: block;
-  }
-
-  .button-submit:hover {
-    color: #fff;
-    background-color: #396df2;
-    cursor: pointer;
-  }
-
-  .button-submit:active {
-    background-color: #172b4d;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .navbar-items {
-    display: none;
-  }
-}
+	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form">
+		 <input type="text" name="name" placeholder="Enter your name" id="name" maxlength=30 required>
+		 <input type="email" name="user-email" placeholder="Enter your e-mail" id="user-email" required>
+		 <textarea name="message" id="text-area" cols="30" rows="10" placeholder="Write your message here" maxlength=500 required></textarea>
+		 <button type="submit" class="button-submit"> Get in Touch </button>
+	   </form>
+  </section>
+</body>
+</html>
