Worked on some issues to have my project approuved

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section class="header-at-top">
-	<h2 class="primary-text"> I’m Alexis, Glad to see you! </h2>
+	<h2 class="primary-text"> I’m Alexis <br> Glad to see you! </h2>
 	<p class="text-about"> I’m a software developer! I can help you build a product ,
 	  feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 	<h2 class="social"> LET'S CONNECT </h2>    
@@ -40,8 +40,8 @@
   </section>
   <section class="containers-works-section">
    <div class="work-container">
-	  <div class="box">
-		 <img src="./image/Snapshoot Portfolio.png" alt="" class="snapshot">
+	  <div class="box" id="first-card">
+		 <img src="./image/snapshoot.png" alt="" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 			   <div class="works-elements">
@@ -67,8 +67,8 @@
 		   <button class="see-project">See Project</button>
 		 </div>
 	   </div>
-	   <div class="box">
-		 <img src="./image/Snapshoot Portfolio (1).png" alt="snapshot poortfolio" class="snapshot">
+	   <div class="box" id="second-card">
+		 <img src="./image/snapshoot-1.png" alt="snapshot poortfolio" class="snapshot">
 		  <div class="more-details">
 			 <div class="work-description-align-item">
 			   <div class="works-elements">
@@ -91,9 +91,8 @@
 			 <button class="see-project"> See Project </button>
 	      </div>
 	   </div>
-
-	 <div class="box">
-		 <img src="./image/Snapshoot Portfolio (2).png" alt="" class="snapshot">
+	   <div class="box">
+		 <img src="./image/snapshoot-2.png" alt="" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 				 <div class="works-elements">
@@ -116,10 +115,9 @@
 			 </ul>
 			 <button class="see-project"> See Project </button>
 		 </div>
-	 </div>
-
-	 <div class="box">
-		 <img src="./image/Snapshoot Portfolio (3).png" alt="" class="snapshot">
+	   </div>
+	 <div class="box" id="fourth-card">
+		 <img src="./image/snapshoot-3.png" alt="" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 			   <div class="works-elements">
@@ -174,9 +172,9 @@
                  <img src="./image/chevron-down.png" alt="" class="chevron">
               </button>
 			  <ul class="language-list">
-				  <li><img src="./image/JS-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
-				  <li><img src="./image/HTML5-icon.png" alt="" class="language-icon"><span class="language-name"> HTML </span></li>
-				  <li><img src="./image/CSS-icon.png" alt="" class="language-icon"><span class="language-name"> CSS </span></li>
+				  <li><img src="./image/js-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
+				  <li><img src="./image/html-icon.png" alt="" class="language-icon"><span class="language-name"> HTML </span></li>
+				  <li><img src="./image/css-icon.png" alt="" class="language-icon"><span class="language-name"> CSS </span></li>
 			  </ul>
            </li>
            <li>
@@ -201,7 +199,6 @@
   <section class="contact">
 	  <h2> Contact me </h2>
 	  <p> If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it  </p>
-
 	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form">
 		 <input type="text" name="name" placeholder="Enter your name" id="name" maxlength=30 required>
 		 <input type="email" name="user-email" placeholder="Enter your e-mail" id="user-email" required>
