My latest commit changing some optional issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="header-at-top">
 	<h2 class="primary-text"> I’m Alexis <br> Glad to see you! </h2>
 	<p class="text-about"> I’m a software developer! I can help you build a product ,
-	  feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+	  feature or website. Look through some of my work and experience! <br> If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 	<h2 class="social"> LET'S CONNECT </h2>    
 	<div class="social-media-icons">
 	  <ul>
