--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section class="header-at-top">
-	<h2 class="primary-text"> I’m Alexis <br> Glad to see you! </h2>
+	<h2 class="primary-text"> I’m Alexis! <br> Glad to see you! </h2>
 	<p class="text-about"> I’m a software developer! I can help you build a product ,
 	  feature or website. Look through some of my work and experience! <br> If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 	<h2 class="social"> LET'S CONNECT </h2>    
