--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                  <img src="./image/chevron-down.png" alt="" class="chevron">
               </button>
 			  <ul class="language-list">
-				  <li><img src="./image/js-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
+				  <li><img src="./image/JS-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
 				  <li><img src="./image/html-icon.png" alt="" class="language-icon"><span class="language-name"> HTML </span></li>
 				  <li><img src="./image/css-icon.png" alt="" class="language-icon"><span class="language-name"> CSS </span></li>
 			  </ul>
