--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Alexis/Portfolio </title>
+    <title> Portfolio </title>
     <link rel="stylesheet" href="StyleSheet.css">
 	<link rel="stylesheet" href="desktop-respons.css">
 </head>
@@ -41,19 +41,20 @@
   <section class="containers-works-section">
    <div class="work-container">
 	  <div class="box" id="first-card">
-		 <img src="./image/snapshoot.png" alt="" class="snapshot">
+		 <img src="./image/snapshoot.png" alt="image card" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 			   <div class="works-elements">
-				   <h2 class="project-title"> Tonic </h2>
-				   <div class="frame-client">
-					   <span class="client">
-						   CANOPY</span>
-					   <img src="./image/Counter.png" alt="">
-					   <span class="role"> Back End Dev </span>
-					   <img src="./image/Counter.png" alt="">
-					   <span class="year"> 2015 </span>
-				   </div>
+				   <h1 class="project-title"> Tonic </h1>
+				   <h2>
+					  <div class="frame-client">
+						<span class="client"> CANOPY </span>
+						<img src="./image/Counter.png" alt="image card">
+						<span class="role"> Back End Dev </span>
+						<img src="./image/Counter.png" alt="">
+						<span class="year"> 2015 </span>
+					  </div>
+				   </h2>
 			   </div>
 		   </div>
 		   <p class="details">
@@ -75,9 +76,9 @@
 				 <h2 class="project-title"> Multi-Post Stories </h2>
 				 <div class="frame-client">
 					<span class="client"> CANOPY </span>
-					<img src="./image/Counter.png" alt="" class="counter">
+					<img src="./image/Counter.png" alt="image card" class="counter">
 					<span class="role"> Back End Dev </span>
-					<img src="./image/Counter.png" alt="" class="counter">
+					<img src="./image/Counter.png" alt="image card" class="counter">
 					<span class="year"> 2015 </span>
 				 </div>
 			   </div>
@@ -100,9 +101,9 @@
 					 <div class="frame-client">
 						 <span class="client">
 							 CANOPY</span>
-						 <img src="./image/Counter.png" alt="" class="counter">
+						 <img src="./image/Counter.png" alt="image card" class="counter">
 						 <span class="role"> Back End Dev </span>
-						 <img src="./image/Counter.png" alt="" class="counter">
+						 <img src="./image/Counter.png" alt="image card" class="counter">
 						 <span class="year">2015</span>
 					 </div>
 				 </div>
@@ -117,16 +118,16 @@
 		 </div>
 	   </div>
 	 <div class="box" id="fourth-card">
-		 <img src="./image/snapshoot-3.png" alt="" class="snapshot">
+		 <img src="./image/snapshoot-3.png" alt="image card" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 			   <div class="works-elements">
 				   <h2 class="project-title"> Multi-Post Stories </h2>
 				   <div class="frame-client">
 					   <span class="client"> CANOPY </span>
-					   <img src="./image/Counter.png" alt="" class="counter">
+					   <img src="./image/Counter.png" alt="image card" class="counter">
 					   <span class="role"> Back End Dev </span>
-					   <img src="./image/Counter.png" alt="" class="counter">
+					   <img src="./image/Counter.png" alt="image card" class="counter">
 					   <span class="year"> 2015 </span>
 				   </div>
 			   </div>
@@ -169,19 +170,19 @@
            <li>
               <span class="language-title"> LANGUAGES </span>
               <button class="chevron-button">
-                 <img src="./image/chevron-down.png" alt="" class="chevron">
+                 <img src="./image/chevron-down.png" alt="image chevron" class="chevron">
               </button>
 			  <ul class="language-list">
-				  <li><img src="./image/JS-icon.png" alt="" class="language-icon"><span class="language-name"> JavaScript </span></li>
-				  <li><img src="./image/html-icon.png" alt="" class="language-icon"><span class="language-name"> HTML </span></li>
-				  <li><img src="./image/css-icon.png" alt="" class="language-icon"><span class="language-name"> CSS </span></li>
+				  <li><img src="./image/JS-icon.png" alt="JS icon" class="language-icon"><span class="language-name"> JavaScript </span></li>
+				  <li><img src="./image/html-icon.png" alt="HTML icon" class="language-icon"><span class="language-name"> HTML </span></li>
+				  <li><img src="./image/css-icon.png" alt="CSS icon" class="language-icon"><span class="language-name"> CSS </span></li>
 			  </ul>
            </li>
            <li>
 		     <div class="frameworks">
 			  <span class="frameworks-title"> Frameworks </span>
 			   <button class="chevron-button">
-			   <img src="./image/chevron-right.png" alt="" class="chevron">
+			   <img src="./image/chevron-right.png" alt="framework-1" class="chevron">
 				</button>
 		     </div>
             </li>
@@ -189,7 +190,7 @@
 			  <div class="skills">
 			    <span class="skills-title"> Skills </span>
 			    <button class="chevron-button">
-			    <img src="./image/chevron-right.png" alt="" class="chevron">
+			    <img src="./image/chevron-right.png" alt="framework-2" class="chevron">
 			    </button>
 			  </div>
 		    </li>
