add alt text to hamburger icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#"> Contact </a></li>
       </ul>
       <button class="menu-phone">
-	   <img src="./image/Enabled.png" alt="">
+	   <img src="./image/Enabled.png" alt="hamburger icon">
 	  </button>
     </nav>
   </header>
