--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Portfolio </title>
+    <title> Alexis's portfolio </title>
     <link rel="stylesheet" href="StyleSheet.css">
 	<link rel="stylesheet" href="desktop-respons.css">
 </head>
@@ -24,7 +24,7 @@
   </header>
 
   <section class="header-at-top">
-	<h2 class="primary-text"> I’m Alexis! <br> Glad to see you! </h2>
+	<h1 class="primary-text"> I’m Alexis! <br> Glad to see you! </h1>
 	<p class="text-about"> I’m a software developer! I can help you build a product ,
 	  feature or website. Look through some of my work and experience! <br> If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 	<h2 class="social"> LET'S CONNECT </h2>    
@@ -44,21 +44,21 @@
 		 <img src="./image/snapshoot.png" alt="image card" class="snapshot">
 		 <div class="more-details">
 		   <div class="work-description-align-item">
-			   <div class="works-elements">
-				   <h1 class="project-title"> Tonic </h1>
-				   <h2>
-					  <div class="frame-client">
-						<span class="client"> CANOPY </span>
-						<img src="./image/Counter.png" alt="image card">
-						<span class="role"> Back End Dev </span>
-						<img src="./image/Counter.png" alt="">
-						<span class="year"> 2015 </span>
-					  </div>
-				   </h2>
-			   </div>
+		     <div class="works-elements">
+			   <h1 class="project-title"> Tonic </h1>
+			   <h2>
+			      <div class="frame-client">
+				  <span class="client"> CANOPY </span>
+				  <img src="./image/Counter.png" alt="image card">
+				  <span class="role"> Back End Dev </span>
+				  <img src="./image/Counter.png" alt="">
+				  <span class="year"> 2015 </span>
+				  </div>
+			   </h2>
+			  </div>
 		   </div>
 		   <p class="details">
-				   A daily selection of privately personalized reads; no accounts or sign-ups required.
+			A daily selection of privately personalized reads; no accounts or sign-ups required.
 		   </p>
 		   <ul class="technologie-label">
 			   <li>html</li>
@@ -73,14 +73,16 @@
 		  <div class="more-details">
 			 <div class="work-description-align-item">
 			   <div class="works-elements">
-				 <h2 class="project-title"> Multi-Post Stories </h2>
-				 <div class="frame-client">
+				 <h1 class="project-title"> Multi-Post Stories </h1>
+				 <h2>
+				   <div class="frame-client">
 					<span class="client"> CANOPY </span>
 					<img src="./image/Counter.png" alt="image card" class="counter">
 					<span class="role"> Back End Dev </span>
 					<img src="./image/Counter.png" alt="image card" class="counter">
 					<span class="year"> 2015 </span>
-				 </div>
+				   </div>
+				 </h2>
 			   </div>
 			 </div>
 			<span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
@@ -97,15 +99,16 @@
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 				 <div class="works-elements">
-					 <h2 class="project-title"> Tonic </h2>
-					 <div class="frame-client">
-						 <span class="client">
-							 CANOPY</span>
+					 <h1 class="project-title"> Tonic </h1>
+					 <h2>
+					   <div class="frame-client">
+						 <span class="client"> CANOPY </span>
 						 <img src="./image/Counter.png" alt="image card" class="counter">
 						 <span class="role"> Back End Dev </span>
 						 <img src="./image/Counter.png" alt="image card" class="counter">
 						 <span class="year">2015</span>
-					 </div>
+					   </div>
+					 </h2>
 				 </div>
 			 </div>
 			 <span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
@@ -122,14 +125,16 @@
 		 <div class="more-details">
 		   <div class="work-description-align-item">
 			   <div class="works-elements">
-				   <h2 class="project-title"> Multi-Post Stories </h2>
-				   <div class="frame-client">
+				   <h1 class="project-title"> Multi-Post Stories </h1>
+				   <h2>
+				     <div class="frame-client">
 					   <span class="client"> CANOPY </span>
 					   <img src="./image/Counter.png" alt="image card" class="counter">
 					   <span class="role"> Back End Dev </span>
 					   <img src="./image/Counter.png" alt="image card" class="counter">
 					   <span class="year"> 2015 </span>
-				   </div>
+				     </div>
+				   </h2>
 			   </div>
 		   </div>
 		   <span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
@@ -145,7 +150,7 @@
    </section>
    <section class="about">
       <div class="intro">
-          <h2 class="title"> About Myself </h2>
+          <h1 class="title"> About Myself </h1>
           <p class="description">
               Hello I’m a software developer! I can help you build a product , feature or 
               website. Look through some of my work and experience! If you like what you
@@ -198,7 +203,7 @@
       </div>
   </section>
   <section class="contact">
-	  <h2> Contact me </h2>
+	  <h1> Contact me </h1>
 	  <p> If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it  </p>
 	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form">
 		 <input type="text" name="name" placeholder="Enter your name" id="name" maxlength=30 required>
