Design mobile menu

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   <header class="header-containers">
     <nav>
       <a class="logo"> Alexis </a> 
-      <ul class="navbar-items">
-        <li><a href="#"> Portfolio </a></li>
-        <li><a href="#"> About </a></li>
-        <li><a href="#"> Contact </a></li>
-      </ul>
+	  <div class="nav-wrapper">
+		<div class="nav-bg"></div>
+		<ul class="navbar-items">
+			<li><a href="#"> Portfolio </a></li>
+			<li><a href="#"> About </a></li>
+			<li><a href="#"> Contact </a></li>
+		</ul>
+		<span class="close-menu">+</span>
+	  </div>
       <button class="menu-phone">
 	    <img src="./image/Enabled.png" alt="hamburger icon">
 	  </button>
